--- a/exercises/36 - Tabs/index.html
+++ b/exercises/36 - Tabs/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper">m
     <div class="tabs">
       <div role="tablist" aria-label="Programming Languages">
         <button role="tab" aria-selected="true" id="js">
