--- a/playground/switch-statements.html
+++ b/playground/switch-statements.html
@@ -8,8 +8,67 @@
   <link rel="stylesheet" href="../base.css">
 </head>
 
-
 <body>
+  <style>
+    .turt {
+      position: relative;
+      --x: 0px;
+      --y: 0px;
+      --rotateX: 0;
+      --rotateY: 0;
+      transform: translateX(var(--x)) translateY(var(--y)) rotateY(var(--rotateX)) rotate(var(--rotateY));
+      transition: transform 0.2s
+    }
+  </style>
+  <img width="200" src="./turtle.png" alt="Turt" class="turt">
+  <script>
+    const turtle = document.querySelector('.turt');
+    let x = 0;
+    let y = 0;
+    const speed = 50;
+    let flipped = false;
+    let rotate = 0;
+
+    function handleKeyDown(e) {
+      if (!e.key.includes('Arrow')) {
+        return;
+      }
+      switch (e.key) {
+        case 'ArrowUp':
+          y -= 1;
+          rotate = -90;
+          break;
+        case 'ArrowDown':
+          y += 1;
+          rotate = 90;
+          break;
+        case 'ArrowLeft':
+          x -= 1;
+          flipped = true;
+          rotate = 0;
+          break;
+        case 'ArrowRight':
+          x += 1;
+          flipped = false;
+          rotate = 0;
+          break;
+        default:
+          console.log('That is not a valid move');
+          break;
+      }
+
+      turtle.setAttribute(
+        'style',
+        `
+      --rotateX: ${flipped ? '180deg' : '0'};
+      --rotateY: ${rotate}deg;
+      --x: ${x * speed}px; 
+      --y: ${y * speed}px;
+      `
+      );
+    }
+    window.addEventListener('keydown', handleKeyDown);
+  </script>
 
 </body>
 
