--- a/exercises/46 - Arrays/for-loops-START.html
+++ b/exercises/46 - Arrays/for-loops-START.html
@@ -14,13 +14,70 @@
 
     const name = 'Wes Bos';
 
+    const wes = {
+      name: 'Wes',
+      age: 100,
+      cool: true,
+    };
+
     // For
+
+    for (let i = 100; i <= 120; i += 2) {
+      console.log(i);
+    }
+
+    for (let i = 0; i < numbers.length; i++) {
+      console.log(numbers[i]);
+    }
 
     // For of
 
+    for (const letter of name) {
+      console.log(letter);
+    }
+
+    for (const number of numbers) {
+      console.log(number);
+    }
+
     // For in
 
+    for (const prop in wes) {
+      console.log(prop);
+    }
+
+    const baseHumanStats = {
+      feet: 2,
+      arms: 2,
+      eyes: 2,
+      head: 1,
+    };
+
+    function Human(name) {
+      this.name = name;
+    }
+
+    Human.prototype = baseHumanStats;
+
+    const wes2 = new Human('wes');
+
+    console.log(Object.entries(wes2));
+
+    for (const prop in wes2) {
+      console.log(prop);
+    }
+
     // While Loop
+
+    const cool = true;
+    let i = 1;
+    while (cool === true) {
+      console.log('You are cool');
+      i++;
+      if (i > 100) {
+        cool = false;
+      }
+    }
   </script>
 </body>
 
