--- a/playground/apis.html
+++ b/playground/apis.html
@@ -9,8 +9,27 @@
 </head>
 
 <body>
+  <p class="user"></p>
   <script>
+    const baseEndpoint = 'https://api.github.com';
+    const usersEndpoint = `${baseEndpoint}/users`;
+    const userEl = document.querySelector('.user');
 
+    function handleError(err) {
+      console.log('oh nooo!');
+      console.log(err);
+      userEl.textContent = `Something went wrong: ${err}`;
+    }
+
+    async function displayUser(username) {
+      userEl.textContent = 'loading...';
+      const response = await fetch(`${usersEndpoint}/${username}`);
+      const data = await response.json();
+      console.log(data);
+      userEl.textContent = `${data.name} - ${data.blog}`;
+    }
+
+    displayUser('wesbos').catch(handleError);
   </script>
 </body>
 
