refactor Dad Jokes to modules

--- a/exercises/76 - Dad Jokes/index.html
+++ b/exercises/76 - Dad Jokes/index.html
@@ -98,7 +98,7 @@
     </button>
   </div>
 
-  <script src="./jokes.js"></script>
+  <script src="./jokes.js" type="module"></script>
 </body>
 
 </html>
